Wired up a bunch of rendering stats, new HUD, other goodies.